--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -3,7 +3,7 @@
 }
 
 .orange {
-  @apply rounded-full border border-orange-400 bg-orange-400 py-1.5 px-5 text-white transition-all hover:bg-orange-900 text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-orange-400 bg-orange-400 py-1.5 px-5 text-white transition-all hover:bg-orange-600 hover:border-orange-600 text-center text-sm font-inter flex items-center justify-center;
 }
 
 .outline {
