--- a/src/components/modules/common/PromptList/PromptList.module.css
+++ b/src/components/modules/common/PromptList/PromptList.module.css
@@ -1,3 +1,3 @@
 .element {
-  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
+  @apply py-8 grid grid-cols-[repeat(auto-fit,minmax(320px,1fr))] gap-4;
 }
